Password strength label should be shown left aligned. BugID 0045901 Fixed

--- a/symfony/plugins/orangehrmSecurityAuthenticationPlugin/web/css/passwordStrength.css
+++ b/symfony/plugins/orangehrmSecurityAuthenticationPlugin/web/css/passwordStrength.css
@@ -24,9 +24,11 @@
 
 .helpText{
     width: 25%;
-    padding-left: 400px;
+    overflow: hidden;
+    padding-left: 15px;
 }
 
-#changeWeakPassword_newPassword_help_text{
-    width: 250px;
+.help_error{
+    width: 230px;
+    overflow: hidden;
 }
